--- a/AirScout/packages.config
+++ b/AirScout/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ajayumi.MimeTypeMap" version="2.5.0" targetFramework="net40" />
   <package id="DeviceId" version="4.5.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net40" />
-  <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net40" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net40" />
 </packages>
